<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.lumi.xenon.MainActivity">

    <Button
        android:id="@+id/Run_all_Class_Methods_and_save_to_external_storage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/Run_all_Class_Methods_and_save_to_external_storage"
        app:layout_constraintBottom_toTopOf="@+id/Run_android_media_AudioManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/Run_android_media_AudioManager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Run_android_media_AudioManager"
        app:layout_constraintBottom_toTopOf="@+id/Run_android_view_inputmethod_InputMethodManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Run_all_Class_Methods_and_save_to_external_storage"
        app:layout_constraintVertical_bias="0.774" />

    <Button
        android:id="@+id/Run_android_view_inputmethod_InputMethodManager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Run_android_view_inputmethod_InputMethodManager"
        app:layout_constraintBottom_toTopOf="@+id/Run_android_media_session_MediaSessionManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Run_android_media_AudioManager" />

    <Button
        android:id="@+id/Run_android_media_session_MediaSessionManager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Run_android_media_session_MediaSessionManager"
        app:layout_constraintBottom_toTopOf="@+id/Run_android_telephony_TelephonyManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Run_android_view_inputmethod_InputMethodManager" />

    <Button
        android:id="@+id/Run_android_telephony_TelephonyManager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Run_android_telephony_TelephonyManager"
        app:layout_constraintBottom_toTopOf="@+id/Run_android_app_UiModeManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Run_android_media_session_MediaSessionManager" />

    <Button
        android:id="@+id/Run_android_app_UiModeManager"
        android:layout_width="251dp"
        android:layout_height="74dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Run_android_app_UiModeManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Run_android_telephony_TelephonyManager" />
</android.support.constraint.ConstraintLayout>
